Add City Filter
Add "type of two wheeler" to form
Add City Filter to Map
Add Marker Title = Type of two wheeler

--- a/app/src/main/res/layout/activity_form.xml
+++ b/app/src/main/res/layout/activity_form.xml
@@ -24,6 +24,10 @@
             style="@style/Form_Title"
             android:text="@string/title_2" />
         <EditText
+            android:id="@+id/type"
+            style="@style/Form_EditText"
+            android:hint="@string/hint_type" />
+        <EditText
             android:id="@+id/brand"
             style="@style/Form_EditText"
             android:hint="@string/hint_brand" />
