--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -25,19 +25,43 @@
 
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="10sp">
 
         <GridLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:columnCount="2"
-            android:rowCount="2">
+            android:columnCount="1"
+            android:rowCount="6">
 
+            <androidx.cardview.widget.CardView
+                android:id="@+id/profile_card"
+                app:cardCornerRadius="8dp"
+                app:cardElevation="8dp"
+                style="@style/Card_Menu">
+
+                <LinearLayout style="@style/Card_Menu_LinearLayout">
+
+                    <ImageView
+                        android:src="@drawable/account_circle"
+                        style="@style/Card_Menu_Image" />
+
+                    <TextView
+                        android:text="@string/Title_5"
+                        style="@style/Card_Menu_Title" />
+
+                    <TextView
+                        android:text="@string/Subtitle_5"
+                        style="@style/Card_Menu_Subtitle" />
+
+                </LinearLayout>
+
+            </androidx.cardview.widget.CardView>
             <androidx.cardview.widget.CardView
                 android:id="@+id/map_card"
                 app:cardCornerRadius="8dp"
                 app:cardElevation="8dp"
-                style="@style/Card_Menu_Left">
+                style="@style/Card_Menu">
 
                 <LinearLayout style="@style/Card_Menu_LinearLayout">
 
@@ -56,60 +80,11 @@
                 </LinearLayout>
 
             </androidx.cardview.widget.CardView>
-
-            <androidx.cardview.widget.CardView
-                android:id="@+id/stats_card"
-                app:cardCornerRadius="8dp"
-                app:cardElevation="8dp"
-                style="@style/Card_Menu_Right">
-
-                <LinearLayout style="@style/Card_Menu_LinearLayout">
-
-                    <ImageView
-                        android:src="@drawable/show_chart"
-                        style="@style/Card_Menu_Image" />
-
-                    <TextView
-                        android:text="@string/Title_2"
-                        style="@style/Card_Menu_Title" />
-
-                    <TextView
-                        android:text="@string/Subtitle_2"
-                        style="@style/Card_Menu_Subtitle" />
-
-                </LinearLayout>
-
-            </androidx.cardview.widget.CardView>
-
-            <androidx.cardview.widget.CardView
-                android:id="@+id/list_card"
-                app:cardCornerRadius="8dp"
-                app:cardElevation="8dp"
-                style="@style/Card_Menu_Left">
-
-                <LinearLayout style="@style/Card_Menu_LinearLayout">
-
-                    <ImageView
-                        android:src="@drawable/motorcycle"
-                        style="@style/Card_Menu_Image" />
-
-                    <TextView
-                        android:text="@string/Tilte_3"
-                        style="@style/Card_Menu_Title" />
-
-                    <TextView
-                        android:text="@string/Subtitle_3"
-                        style="@style/Card_Menu_Subtitle" />
-
-                </LinearLayout>
-
-            </androidx.cardview.widget.CardView>
-
             <androidx.cardview.widget.CardView
                 android:id="@+id/add_card"
                 app:cardCornerRadius="8dp"
                 app:cardElevation="8dp"
-                style="@style/Card_Menu_Right">
+                style="@style/Card_Menu">
 
                 <LinearLayout style="@style/Card_Menu_LinearLayout">
 
@@ -128,36 +103,57 @@
                 </LinearLayout>
 
             </androidx.cardview.widget.CardView>
-
             <androidx.cardview.widget.CardView
-                android:id="@+id/help_card"
+                android:id="@+id/list_card"
                 app:cardCornerRadius="8dp"
                 app:cardElevation="8dp"
-                style="@style/Card_Menu_Left">
+                style="@style/Card_Menu">
 
                 <LinearLayout style="@style/Card_Menu_LinearLayout">
 
                     <ImageView
-                        android:src="@drawable/help_outline"
+                        android:src="@drawable/motorcycle"
                         style="@style/Card_Menu_Image" />
 
                     <TextView
-                        android:text="@string/Title_5"
+                        android:text="@string/Tilte_3"
                         style="@style/Card_Menu_Title" />
 
                     <TextView
-                        android:text="@string/Subtitle_5"
+                        android:text="@string/Subtitle_3"
                         style="@style/Card_Menu_Subtitle" />
 
                 </LinearLayout>
 
             </androidx.cardview.widget.CardView>
+            <androidx.cardview.widget.CardView
+                android:id="@+id/stats_card"
+                app:cardCornerRadius="8dp"
+                app:cardElevation="8dp"
+                style="@style/Card_Menu">
 
+                <LinearLayout style="@style/Card_Menu_LinearLayout">
+
+                    <ImageView
+                        android:src="@drawable/show_chart"
+                        style="@style/Card_Menu_Image" />
+
+                    <TextView
+                        android:text="@string/Title_2"
+                        style="@style/Card_Menu_Title" />
+
+                    <TextView
+                        android:text="@string/Subtitle_2"
+                        style="@style/Card_Menu_Subtitle" />
+
+                </LinearLayout>
+
+            </androidx.cardview.widget.CardView>
             <androidx.cardview.widget.CardView
                 android:id="@+id/donate_card"
                 app:cardCornerRadius="8dp"
                 app:cardElevation="8dp"
-                style="@style/Card_Menu_Right">
+                style="@style/Card_Menu">
 
                 <LinearLayout style="@style/Card_Menu_LinearLayout">
 
