Add Profile Section
+ Email Auth interaction

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -109,5 +109,22 @@
         <item name="android:textSize">20sp</item>
     </style>
 
+    <style name="Profile_Text_1">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_marginBottom">15sp</item>
+        <item name="android:fontFamily">@font/righteous</item>
+        <item name="android:textColor">@android:color/white</item>
+        <item name="android:textSize">33sp</item>
+    </style>
+
+    <style name="Profile_Text_2">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:fontFamily">@font/righteous</item>
+        <item name="android:textColor">@color/Red</item>
+        <item name="android:textSize">20sp</item>
+    </style>
+
 
 </resources>
