--- a/app/src/main/res/layout/activity_map.xml
+++ b/app/src/main/res/layout/activity_map.xml
@@ -17,22 +17,23 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="10sp"
-        android:layout_marginVertical="15sp"
+        android:layout_marginVertical="10sp"
         android:orientation="horizontal">
 
         <EditText
             android:id="@+id/preferred_city"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginRight="10sp"
+            android:layout_marginRight="20sp"
             android:layout_weight="1"
             android:backgroundTint="@color/Red"
             android:fontFamily="@font/righteous"
-            android:hint="Enter your city here"
+            android:hint="CITY"
             android:textColor="@android:color/white"
             android:textColorHint="@color/Red"
-            android:textSize="20sp"
-            android:textStyle="bold" />
+            android:textSize="17sp"
+            android:textStyle="bold"
+            android:maxLines="1"/>
 
         <Button
             android:id="@+id/filter_button"
@@ -40,7 +41,7 @@
             android:layout_height="wrap_content"
             android:background="@drawable/button_layout"
             android:fontFamily="@font/righteous"
-            android:text="Filter"
+            android:text="SEARCH"
             android:textColor="@android:color/white"
             android:textSize="17sp"
             android:textStyle="bold" />
