--- a/app/src/main/res/layout/activity_form.xml
+++ b/app/src/main/res/layout/activity_form.xml
@@ -3,7 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:orientation="vertical"
-    android:background="#202124"
+    android:background="@color/BackgroundColorDark"
     >
 
     <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
