--- a/app/src/main/res/layout/activity_map.xml
+++ b/app/src/main/res/layout/activity_map.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#202124"
+    android:background="@color/BackgroundColorDark"
     android:orientation="vertical">
 
     <fragment xmlns:tools="http://schemas.android.com/tools"
