--- a/app/src/main/res/layout/activity_form.xml
+++ b/app/src/main/res/layout/activity_form.xml
@@ -67,6 +67,7 @@
         android:layout_marginVertical="20sp"
         android:background="@drawable/button_layout"
         android:fontFamily="@font/righteous"
+        android:onClick="SendToDatabase"
         android:padding="10sp"
         android:text="@string/send_button"
         android:textColor="@android:color/white"
