--- a/app/src/main/res/layout/activity_statistics.xml
+++ b/app/src/main/res/layout/activity_statistics.xml
@@ -14,7 +14,7 @@
         android:orientation="horizontal">
 
         <EditText
-            android:id="@+id/preferred_city"
+            android:id="@+id/preferred_city_stats"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginRight="20sp"
@@ -28,7 +28,7 @@
             android:textStyle="bold" />
 
         <Button
-            android:id="@+id/filter_button"
+            android:id="@+id/filter_button_stats"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@drawable/button_layout"
