--- a/app/src/main/res/drawable/add_location.xml
+++ b/app/src/main/res/drawable/add_location.xml
@@ -1,5 +1,5 @@
 <vector android:height="105dp" android:tint="#FF0000"
     android:viewportHeight="24.0" android:viewportWidth="24.0"
     android:width="105dp" xmlns:android="http://schemas.android.com/apk/res/android">
-    <path android:fillColor="#FF000000" android:pathData="M3.5,18.49l6,-6.01 4,4L22,6.92l-1.41,-1.41 -7.09,7.97 -4,-4L2,16.99z"/>
+    <path android:fillColor="#FF000000" android:pathData="M12,2C8.14,2 5,5.14 5,9c0,5.25 7,13 7,13s7,-7.75 7,-13c0,-3.86 -3.14,-7 -7,-7zM16,10h-3v3h-2v-3L8,10L8,8h3L11,5h2v3h3v2z"/>
 </vector>
