--- a/app/src/main/res/layout/content_dashboard.xml
+++ b/app/src/main/res/layout/content_dashboard.xml
@@ -47,7 +47,7 @@
 
                     <ImageView
                         style="@style/Card_Menu_Image"
-                        android:src="@drawable/place" />
+                        android:src="@drawable/search" />
 
                     <TextView
                         style="@style/Card_Menu_Title"
@@ -71,7 +71,7 @@
 
                     <ImageView
                         style="@style/Card_Menu_Image"
-                        android:src="@drawable/add_circle_outline" />
+                        android:src="@drawable/add_location" />
 
                     <TextView
                         style="@style/Card_Menu_Title"
@@ -119,7 +119,7 @@
 
                     <ImageView
                         style="@style/Card_Menu_Image"
-                        android:src="@drawable/show_chart" />
+                        android:src="@drawable/pie_chart" />
 
                     <TextView
                         style="@style/Card_Menu_Title"
