--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -19,8 +19,8 @@
         <item name="android:layout_marginVertical">10sp</item>
         <item name="android:backgroundTint">@color/Red</item>
         <item name="android:fontFamily">@font/righteous</item>
-        <item name="android:textAlignment">textEnd</item>
-        <item name="android:layout_gravity">end</item>
+        <item name="android:textAlignment">textStart</item>
+        <item name="android:layout_gravity">start</item>
         <item name="android:textColor">@android:color/white</item>
         <item name="android:textColorHint">@color/Red</item>
         <item name="android:textSize">19sp</item>
@@ -31,12 +31,12 @@
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:fontFamily">@font/righteous</item>
-        <item name="android:textAlignment">viewEnd</item>
+        <item name="android:textAlignment">viewStart</item>
         <item name="android:textColor">@android:color/white</item>
         <item name="android:textSize">25sp</item>
         <item name="android:textStyle">bold</item>
         <item name="android:layout_marginVertical">10sp</item>
-        <item name="android:layout_marginRight">30sp</item>
+        <item name="android:layout_marginLeft">30sp</item>
     </style>
 
     <style name="Card_Menu">
