Add Colors Labels
Add Color label for each vehicle type (Map Colors  = Stats Colors)
For example: Bike = RED

--- a/app/src/main/res/values/strings_form.xml
+++ b/app/src/main/res/values/strings_form.xml
@@ -15,11 +15,12 @@
 
 
     <string-array name="vehicle_array">
+        <item>BIKE</item>
         <item>SCOOTER</item>
         <item>CRUISER</item>
         <item>OFF-ROAD</item>
         <item>TOURING</item>
-        <item>SPORTS BIKE</item>
+        <item>SPORTS-BIKE</item>
         <item>OTHER</item>
     </string-array>
 
