--- a/app/src/main/res/layout/activity_theft_details.xml
+++ b/app/src/main/res/layout/activity_theft_details.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     android:background="#202124"
     android:orientation="vertical"
-    tools:context=".Statistics">
+    tools:context=".TheftDetails">
 
     <LinearLayout
         android:layout_width="match_parent"
