--- a/app/src/main/res/layout/viewholder_details.xml
+++ b/app/src/main/res/layout/viewholder_details.xml
@@ -1,49 +1,61 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:background="@color/BackgroundColorDark"
-    android:orientation="vertical">
 
-    <LinearLayout
+<androidx.cardview.widget.CardView android:layout_width="match_parent"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:background="@color/BackgroundColorDark"
+    android:layout_height="wrap_content"
+    android:layout_marginVertical="10sp"
+    android:outlineSpotShadowColor="@color/BackgroundColorDark">
+
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:background="@color/BackgroundColorDark"
+        android:orientation="vertical">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:orientation="vertical">
+            android:orientation="horizontal">
 
-            <TextView
-                android:id="@+id/detail1"
-                style="@style/Details_Text"
-                android:text="text" />
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:orientation="vertical">
 
-            <TextView
-                android:id="@+id/detail2"
-                style="@style/Details_Text"
-                android:text="text" />
+                <TextView
+                    android:id="@+id/detail1"
+                    style="@style/Details_Text"
+                    android:text="text" />
 
-            <TextView
-                android:id="@+id/detail3"
-                style="@style/Details_Text"
-                android:text="text" />
+                <TextView
+                    android:id="@+id/detail2"
+                    style="@style/Details_Text"
+                    android:text="text" />
 
-            <TextView
-                android:id="@+id/detail4"
-                style="@style/Details_Text"
-                android:text="text" />
+                <TextView
+                    android:id="@+id/detail3"
+                    style="@style/Details_Text"
+                    android:text="text" />
+
+                <TextView
+                    android:id="@+id/detail4"
+                    style="@style/Details_Text"
+                    android:text="text" />
+            </LinearLayout>
+
+
+            <ImageView
+                android:id="@+id/vehicle_image"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="1" />
+
         </LinearLayout>
-
-
-        <ImageView
-            android:id="@+id/vehicle_image"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="1" />
 
     </LinearLayout>
 
-</LinearLayout>
+</androidx.cardview.widget.CardView>
+
+
