--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -144,5 +144,29 @@
         <item name="android:textSize">18sp</item>
     </style>
 
+    <style name="Text_SearchBar">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_marginRight">20sp</item>
+        <item name="android:layout_weight">1</item>
+        <item name="android:backgroundTint">@color/Red</item>
+        <item name="android:fontFamily">@font/righteous</item>
+        <item name="android:maxLines">1</item>
+        <item name="android:textColor">@android:color/white</item>
+        <item name="android:textColorHint">@color/Red</item>
+        <item name="android:textSize">17sp</item>
+        <item name="android:textStyle">bold</item>
+    </style>
+
+    <style name="Button_SearchBar">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:background">@drawable/button_layout</item>
+        <item name="android:fontFamily">@font/righteous</item>
+        <item name="android:textColor">@android:color/white</item>
+        <item name="android:textSize">17sp</item>
+        <item name="android:textStyle">bold</item>
+    </style>
+
 
 </resources>
