--- a/app/src/main/res/layout/activity_theft_details.xml
+++ b/app/src/main/res/layout/activity_theft_details.xml
@@ -15,28 +15,12 @@
 
         <EditText
             android:id="@+id/search_text_details"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginRight="20sp"
-            android:layout_weight="1"
-            android:backgroundTint="@color/Red"
-            android:fontFamily="@font/righteous"
-            android:maxLines="1"
-            android:textColor="@android:color/white"
-            android:textColorHint="@color/Red"
-            android:textSize="17sp"
-            android:textStyle="bold" />
+            style="@style/Text_SearchBar" />
 
         <Button
             android:id="@+id/search_button_details"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="@drawable/button_layout"
-            android:fontFamily="@font/righteous"
             android:text="SEARCH"
-            android:textColor="@android:color/white"
-            android:textSize="17sp"
-            android:textStyle="bold" />
+            style="@style/Button_SearchBar" />
 
     </LinearLayout>
 
