--- a/app/src/main/res/layout/activity_theft_details.xml
+++ b/app/src/main/res/layout/activity_theft_details.xml
@@ -28,6 +28,7 @@
         android:id="@+id/recyclerview_details"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_margin="20sp" />
+        android:layout_marginHorizontal="20sp"
+        android:layout_marginBottom="20sp"/>
 
 </LinearLayout>
