--- a/app/src/main/res/layout/viewholder_details.xml
+++ b/app/src/main/res/layout/viewholder_details.xml
@@ -1,60 +1,67 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<androidx.cardview.widget.CardView android:layout_width="match_parent"
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:background="@color/BackgroundColorDark"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginVertical="10sp"
-    android:outlineSpotShadowColor="@color/BackgroundColorDark">
+    android:layout_marginBottom="15sp"
+    android:outlineSpotShadowColor="@color/BackgroundColorLight"
+    app:cardBackgroundColor="@color/BackgroundColorLight"
+    app:cardCornerRadius="10dp"
+    app:cardElevation="10dp"
+    app:contentPadding="10sp">
 
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/BackgroundColorDark"
+        android:background="@color/BackgroundColorLight"
         android:orientation="vertical">
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:orientation="vertical">
+                android:gravity="center"
+                android:orientation="horizontal">
 
                 <TextView
                     android:id="@+id/detail1"
                     style="@style/Details_Text"
-                    android:text="text" />
+                    android:text="Brand" />
 
                 <TextView
                     android:id="@+id/detail2"
                     style="@style/Details_Text"
-                    android:text="text" />
+                    android:text="Model" />
 
-                <TextView
-                    android:id="@+id/detail3"
-                    style="@style/Details_Text"
-                    android:text="text" />
-
-                <TextView
-                    android:id="@+id/detail4"
-                    style="@style/Details_Text"
-                    android:text="text" />
             </LinearLayout>
-
 
             <ImageView
                 android:id="@+id/vehicle_image"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="200sp"
+                android:layout_marginVertical="15sp"
                 android:layout_weight="1" />
 
-        </LinearLayout>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:gravity="center"
+                android:orientation="horizontal">
+                <TextView
+                    android:id="@+id/detail3"
+                    style="@style/Details_Text"
+                    android:text="Street" />
 
-    </LinearLayout>
+                <TextView
+                    android:id="@+id/detail4"
+                    style="@style/Details_Text"
+                    android:text="City" />
+
+            </LinearLayout>
+
+        </LinearLayout>
 
 </androidx.cardview.widget.CardView>
 
