--- a/app/src/main/res/layout/content_dashboard.xml
+++ b/app/src/main/res/layout/content_dashboard.xml
@@ -41,7 +41,8 @@
                 android:id="@+id/map_card"
                 style="@style/Card_Menu"
                 app:cardCornerRadius="8dp"
-                app:cardElevation="8dp">
+                app:cardElevation="8dp"
+                app:cardBackgroundColor="@color/BackgroundColorDark">
 
                 <LinearLayout style="@style/Card_Menu_LinearLayout">
 
@@ -65,7 +66,8 @@
                 android:id="@+id/add_card"
                 style="@style/Card_Menu"
                 app:cardCornerRadius="8dp"
-                app:cardElevation="8dp">
+                app:cardElevation="8dp"
+                app:cardBackgroundColor="@color/BackgroundColorDark">
 
                 <LinearLayout style="@style/Card_Menu_LinearLayout">
 
@@ -89,7 +91,8 @@
                 android:id="@+id/list_card"
                 style="@style/Card_Menu"
                 app:cardCornerRadius="8dp"
-                app:cardElevation="8dp">
+                app:cardElevation="8dp"
+                app:cardBackgroundColor="@color/BackgroundColorDark">
 
                 <LinearLayout style="@style/Card_Menu_LinearLayout">
 
@@ -113,7 +116,8 @@
                 android:id="@+id/stats_card"
                 style="@style/Card_Menu"
                 app:cardCornerRadius="8dp"
-                app:cardElevation="8dp">
+                app:cardElevation="8dp"
+                app:cardBackgroundColor="@color/BackgroundColorDark">
 
                 <LinearLayout style="@style/Card_Menu_LinearLayout">
 
