--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_height="match_parent"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:layout_height="match_parent"
     android:background="@color/BackgroundColorDark"
-    android:orientation="vertical">
-
+    android:orientation="vertical"
+    tools:context=".Profile">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -36,7 +36,7 @@
     </LinearLayout>
 
     <Button
-        android:id="@+id/logout_login"
+        android:id="@+id/logout_button"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="40sp"
@@ -46,8 +46,7 @@
         android:paddingVertical="3sp"
         android:text="LOG OUT"
         android:textColor="@android:color/white"
-        android:textSize="25sp"
-        />
+        android:textSize="25sp" />
 
 </LinearLayout>
 
